# conway

./: README.md  README.org
cppconway/: CMakeLists.txt
cppconway/src/: board.cc  board.h  conway.cc
goconway/: board.go  board_test.go  goconway.go
goconway/cmd/goconway/: .gitignore  goconway.go
goconway/goconway/: goconway.go
hsconway/: .gitignore  conway.cabal  glider.conway  package.yaml  stack.yaml
hsconway/app/: Main.hs
hsconway/patterns/: blinker.conway  glider.conway
hsconway/src/Conway/: Board.hs  BoardDisplay.hs  BoardIO.hs
oconway/: .gitignore  Makefile  README.org  board.ml  board.mli  conway.ml  dune  listutils.ml  listutils.mli  ui.ml  ui.mli
patterns/: blinker.conway  blinker.rle
zigconway/: build.zig
zigconway/src/: board.zig  main.zig  test.zig
