name:                conway
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/timmyw/conway#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Whelan
maintainer:          tim@zipt.co
copyright:           MIT
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Conway.Board
                     , Conway.BoardDisplay
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

executable conway
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , cmdargs
                     , conway
